--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
-v0.0.1, 17/02/2013 -- Initial release.
+v0.0.1, 17/02/2013 -- Initial release
 v0.0.2, 17/02/2013 -- Trivial packaging problems
+v0.1.0, 17/02/2013 -- Switch to more sophisticated algorithm that better run length encodes the results
