--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,3 +2,4 @@ v0.0.1, 17/02/2013 -- Initial release
 v0.0.2, 17/02/2013 -- Trivial packaging problems
 v0.1.0, 17/02/2013 -- Switch to more sophisticated algorithm that better run length encodes the results
 v0.1.1, 18/02/2013 -- Significant improvement of behaviour in the presence of cycles of length 2.
+v0.1.2, 18/02/2013 -- Improved compression of the resulting list. Make behaviour more collection like.
